src/main/webapp/css/imcms-login-page.css
@import url("imcms-info-page.css");

.imcms-info-head__login {

}

.imcms-info-body__login {
    padding-left: 60px;
    padding-right: 60px;
}

.imcms-login__error-msg {
    font-weight: 700;
    font-size: 15px;
}

.imcms-login__footer {
    padding-bottom: 15%;
}

.imcms-info-body__providers {
    border-top: solid 1px #c9d3d8;
}

.auth-provider-button:first-of-type {
    margin-left: 15px;
}

.info-block {
    padding-bottom: 15px;
    padding-top: 15px;
}

.imcms-info-footer__message {
    display: inline-block;
    line-height: 30px;
    vertical-align: top;
}

.auth-provider-button__icon {
    opacity: .7;
    width: 30px;
}

.auth-provider-button__icon:hover {
    opacity: 1;
}

.imcms-button--positive {
    position: absolute;
    right: 8%;
}

.imcms-button--save {
    position: absolute;
    left: 8%;
}

.imcms-button--neutral {
    float: right;
}

